Improve editing points and fix deleting points
- fixed propagation not stopping when dragging outside of edit mode
- fixed the details panel not properly showing a scrollbar on larger screens
- fixed the details panel cutting off the category info on mobile
- fixed the bottom padding for details-panel-container on mobile
- added a controls div to the details div that contains a toggle focus button and view list button
- added a relocate pin button when editing a point
- fixed groups being improperly deleted
- fixed "Start a new blank map" breaking edit mode

--- a/style/details.css
+++ b/style/details.css
@@ -19,14 +19,18 @@
     "icon name"
     "description description";
   align-items: center;
-  overflow-y: auto;
-  max-height: 50vh;
+  /* overflow-y: auto;
+  max-height: 50vh; */
+}
+
+#details-panel-container {
+	max-height: 100vh;
 }
 
 @media (max-width: 768px) {
   #details-panel-container {
     max-height: 50dvh;
-    padding-bottom: 56px;
+    padding-bottom: 9px;
   }
 
   .details-panel {
@@ -126,7 +130,7 @@
   align-self: start;
 }
 
-.details-header .edit-mode {
+.details-header .edit-buttons {
   grid-column: 1 / 3;
   display: flex;
   gap: 20px;
